Closed Bug 193803 Opened 22 years ago Closed 22 years ago

Fix ROLE_PANE events and object hierarchy

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access)

Attachments

(1 file, 1 obsolete file)

When we have an iframe, browser or frame a lot of work is done to create only
one accessible object. It is more natural to have 2, one for the outer <iframe>,
<browser> or <frame> tag, and one for the inner document root.

In fact, Internet Explorer uses 2 objects - ROLE_CLIENT on the outside and
ROLE_PANE on the inside. Also, having only 1 object is causing problems when an
event occurs on the object that we're trying to remove.

Therefore, there is no reason at all to have only 1 accessible object there.
Attachment #114751 - Flags: superreview?(Henry.Jia)
Attachment #114751 - Flags: review?(kyle.yuan)
Comment on attachment 114751 [details] [diff] [review]
Use natural outer/inner hierarchy, don't override accessible navigation

I prefer changes to the class name as well, because the current names seem
weird - nsHTMLIFrameRootAccessible is a child of nsHTMLIFrameAccessible. We
could use nsHTMLIFrameOutertAccessible/nsHTMLIFrameInnerAccessible instead.
Attachment #114751 - Flags: review?(kyle.yuan) → review-
the file name should be changed to nsHTMLIFrameAccessible.cpp if you changed the
class names.
Attachment #114751 - Flags: superreview?(Henry.Jia)
Kyle, do you mind if we fix the naming in another patch? Right now I have a lot
of frame/doc related work to do, we can get to the renaming another time, if
that's okay.
Attachment #114751 - Attachment is obsolete: true
Attachment #114877 - Flags: review?
Comment on attachment 114877 [details] [diff] [review]
Same patch, fixed some whitespace problems

r=kyle, that's okay with me.
Attachment #114877 - Flags: review? → review+
Attachment #114877 - Flags: superreview?(Henry.Jia)
Comment on attachment 114877 [details] [diff] [review]
Same patch, fixed some whitespace problems

1. There should be indent in the second line of the below.
+	 mListener->HandleEvent(nsIAccessibleEventListener::EVENT_REORDER, 
+	 parentAccessible? parentAccessible:this, nsnull);
Also, there should not be a space after the question mark in
"parentAccessible? parentAccessible:this"

2. Pay attention to the indent of
+  *aNumChildren = 1;
+	return NS_OK;

sr=Henry except the above.
Attachment #114877 - Flags: superreview?(Henry.Jia) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: